<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <Button
        android:id="@+id/examinar_cifrar_rsa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        style="@style/StyleButton"
        android:text="Examinar" />

    <EditText
        android:id="@+id/ubicacion_archivo_cifrar_rsa"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/examinar_cifrar_rsa"
        android:editable="false"
        android:hint="@string/ubicacion"/>

    <CheckBox
        android:id="@+id/sobreescribir_cifrar_rsa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ubicacion_archivo_cifrar_rsa"
        android:text="@string/sobreescribir"/>

    <TextView
        android:id="@+id/info_carpeta_destino_cifrar_rsa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/sobreescribir_cifrar_rsa"
        android:text="@string/no_sobre"/>

    <Button
        android:id="@+id/cifrar_cifrar"
        style="@style/StyleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:text="@string/cifrar" />
</RelativeLayout>